<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/categoriesFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.iotlab4.fragments.CategoriesFragment"
        android:label="@string/tab_categories"
        tools:layout="@layout/fragment_categories">

        <action
            android:id="@+id/action_categories_to_meals"
            app:destination="@id/mealsFragment" />
    </fragment>

    <fragment
        android:id="@+id/mealsFragment"
        android:name="com.example.iotlab4.fragments.MealsFragment"
        android:label="@string/tab_meals"
        tools:layout="@layout/fragment_meals">

        <argument
            android:name="strCategory"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_meals_to_recipe"
            app:destination="@id/recipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.iotlab4.fragments.RecipeFragment"
        android:label="@string/tab_recipe"
        tools:layout="@layout/fragment_recipe">

        <argument
            android:name="idMeal"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

</navigation>